# Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
# or more contributor license agreements. Licensed under the Elastic License;
# you may not use this file except in compliance with the Elastic License.

[metadata]
name = elastic-package-assets
version = 0.0.1
url = https://github.com/elastic/package-assets
license = Elastic License
license_file = LICENSE.txt

[options]
packages =
    elastic.package.assets
package_dir =
    elastic.package.assets = assets
install_requires =
    pygithub
    pyyaml
python_requires = >=3.8.0
